# MOM6-LETKF-Data

./: CMakeLists.txt  README.md
mom6/obsop/: MAPL_Tripolar.nc  MOM_parameter_doc.all  MOM_parameter_doc.debugging  MOM_parameter_doc.layout  MOM_parameter_doc.short  Vertical_coordinate.nc  available_diags.000000  diag_table  forcing.nc  ocean.stats.nc  ocean_geometry.nc  prog.nc  prog_z.nc  sfc_ave.nc  test5.geosgcm_budi.20000416_0300z.nc4  test5.geosgcm_budi.20000416_0600z.nc4  test5.geosgcm_prog.20000416_0600z.nc4  test5.prog.eta.20000416_0600z.nc4
mom6/obsop/INPUT/: ocean_hgrid.nc  ocean_static.nc  ocean_topog_Edited.nc
mom6/obsop/RESTART/: log
test/fix/: input.nml.obsop
test/test_obsop_sss/: SMAP_L2B_SSS_36950_20220101T005200_R18240_V5.0.h5  SMAP_L3_SSS_20220105_8DAYS_V5.0.nc  prog.nc  test_obsop_sss_l2.sh  test_obsop_sss_l3.sh
test/test_obsop_sst/: 20120101022144-NODC-L3C_GHRSST-SSTskin-AVHRR_Pathfinder-PFV5.2_NOAA19_G_2012001_night-v02.0-fv01.0.nc  input.nml  test_obsop_sst.sh
test/test_obsop_sst_geo/: 20220101000000-OSPO-L2P_GHRSST-SSTskin-MSG01-v02.0-fv01.0.nc  20220110000000-STAR-L2P_GHRSST-SSTsubskin-ABI_G16-ACSPO_V2.70-v02.0-fv01.0.nc  G16_075_0_W.nc  test_obsop_sst_geo_g16_abi.sh  test_obsop_sst_geo_msg01.sh
